feat(86c71aqxb): Created verification email endpoint
